--- a/doc/citations/ref.bib
+++ b/doc/citations/ref.bib
@@ -16066,6 +16066,24 @@ archivePrefix = {arXiv},
     pcsection = {Turbulent combustion, front propagation, radiation \& ionization}
 }
 
+@ARTICLE{2025arXiv251026918G,
+       author = {{Ghosh}, Oindrila and {Brandenburg}, Axel and {Caprini}, Chiara and {Neronov}, Andrii and {Vazza}, Franco},
+        title = "{Can galactic magnetic fields diffuse into the voids?}",
+      journal = {arXiv e-prints},
+     keywords = {Cosmology and Nongalactic Astrophysics, Astrophysics of Galaxies, High Energy Astrophysical Phenomena},
+         year = 2025,
+        month = oct,
+          eid = {arXiv:2510.26918},
+        pages = {arXiv:2510.26918},
+          doi = {10.48550/arXiv.2510.26918},
+archivePrefix = {arXiv},
+       eprint = {2510.26918},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251026918G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+    pcsection = {Primordial magnetic fields and decaying turbulence}
+}
+
 @ARTICLE{2025arXiv251217885G,
        author = {{Gent}, Frederick A. and {Mac Low}, Mordecai-Mark and {Korpi-Lagg}, Maarit J. and {Puro}, Touko and {Reinhardt}, Matthias},
         title = "{Asymptotic behaviour of galactic small-scale dynamos at modest magnetic Prandtl number}",
@@ -16080,6 +16098,7 @@ archivePrefix = {arXiv},
        eprint = {2512.17885},
  primaryClass = {astro-ph.GA},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251217885G},
+    pcsection = {Small-scale dynamos and reconnection},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -16097,6 +16116,7 @@ archivePrefix = {arXiv},
        eprint = {2512.17770},
  primaryClass = {astro-ph.HE},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251217770B},
+    pcsection = {Large-scale dynamos, helical turbulence, and catastrophic quenching},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -16114,6 +16134,7 @@ archivePrefix = {arXiv},
        eprint = {2512.11973},
  primaryClass = {astro-ph.SR},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251211973S},
+    pcsection = {Small-scale dynamos and reconnection},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -16131,6 +16152,7 @@ archivePrefix = {arXiv},
        eprint = {2512.09725},
  primaryClass = {astro-ph.EP},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251209725E},
+    pcsection = {Planet formation},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -16148,6 +16170,7 @@ archivePrefix = {arXiv},
        eprint = {2512.09177},
  primaryClass = {hep-ph},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251209177G},
+    pcsection = {Chiral MHD},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -16167,6 +16190,7 @@ archivePrefix = {arXiv},
        eprint = {2511.00513},
  primaryClass = {astro-ph.EP},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...995...39B},
+    pcsection = {Planet formation},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -16184,6 +16208,7 @@ archivePrefix = {arXiv},
        eprint = {2511.19508},
  primaryClass = {astro-ph.CO},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251119508M},
+    pcsection = {Primordial magnetic fields and decaying turbulence},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -16201,6 +16226,7 @@ archivePrefix = {arXiv},
        eprint = {2511.12195},
  primaryClass = {astro-ph.IM},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251112195B},
+    pcsection = {Code comparison \& reference},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -16217,6 +16243,7 @@ archivePrefix = {arXiv},
         pages = {87},
           doi = {10.1007/s12036-025-10114-3},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025JApA...46...87S},
+    pcsection = {Coronal heating and coronal mass ejections},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -16235,23 +16262,7 @@ archivePrefix = {arXiv},
        eprint = {2511.05380},
  primaryClass = {astro-ph.SR},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025A&A...703A.298N},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@ARTICLE{2025arXiv251026918G,
-       author = {{Ghosh}, Oindrila and {Brandenburg}, Axel and {Caprini}, Chiara and {Neronov}, Andrii and {Vazza}, Franco},
-        title = "{Can galactic magnetic fields diffuse into the voids?}",
-      journal = {arXiv e-prints},
-     keywords = {Cosmology and Nongalactic Astrophysics, Astrophysics of Galaxies, High Energy Astrophysical Phenomena},
-         year = 2025,
-        month = oct,
-          eid = {arXiv:2510.26918},
-        pages = {arXiv:2510.26918},
-          doi = {10.48550/arXiv.2510.26918},
-archivePrefix = {arXiv},
-       eprint = {2510.26918},
- primaryClass = {astro-ph.CO},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251026918G},
+    pcsection = {Code comparison \& reference},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
