added powerspectrum output

--- a/samples/2d-tests/dark-matter/README
+++ b/samples/2d-tests/dark-matter/README
@@ -14,3 +14,7 @@ Comments:
     This example was adapted from ../selfgrav-shearwave-dust-par
 References:
     to be added.
+
+Martel, H., \& Shapiro, P. R.\ymn{1998}{297}{467}
+{485}{A convenient set of comoving cosmological variables and their application}
+
